--- a/index (1).html/style.css
+++ b/index (1).html/style.css
@@ -146,7 +146,6 @@ h2 {
     padding: 20px;
     padding-top: 50px;
     border: 1px solid white;
-    margin: 10px;
     text-align: center;
     justify-content: space-around;
 }
@@ -202,6 +201,7 @@ h2 {
     color: white;
     width: 500px;
     text-align: left;
+    margin: 0;
 }
 .newsletter-container {
     padding-top: 20px;
