--- a/style.css
+++ b/style.css
@@ -6,13 +6,12 @@ body {
 .story-video {
     background-image: url(./design-assets/bgk-middle.png);
     height: 500px;
+    display: flex;
 }
 
 .story-video img {
     display: block;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     align-self: center;
 }
 
@@ -96,8 +95,7 @@ body {
 /* Team Section */
 
 .team {
-    background: url(https://i.pinimg.com/originals/60/c1/43/60c143c5a7e8c9cccae51f5aebda73c0.jpg), rgba(0, 0, 255, 99%);
-    background-blend-mode: screen;
+    background-image: url(./design-assets/bgk-header.png);
     color: white;
 }
 
